# cpp_wood_defect

./: .gitignore  CMakeLists.txt  README.md  build.sh  cpp_wood_defect_vs_tensorrt_yolo.md  hikUse.md  tensorrt_yolo_flow.dot
include/: camera.h  config.h  infer.h  plc_link.h  postprocessor.h  preprocessor.h  trt_engine.h
src/: camera.cpp  main.cpp  plc_link.cpp  postprocessor.cpp  preprocessor.cpp  trt_engine.cpp
